Ajustes do header

--- a/Site Mathtech/bc-exercicios/3 ano/menu-exercicios3.html
+++ b/Site Mathtech/bc-exercicios/3 ano/menu-exercicios3.html
@@ -17,16 +17,10 @@
                     <a href="../../index.html#sobreConteudo">conteúdo</a>
                     <a href="../../index.html#aTv">atividades</a>
                     <a href="../../index.html#materialHome">materiais</a>
-                    <a href="../../index.html#sobreQuiz">quizzes</a>
                     <a href="../../index.html#quemsomos">quem somos</a>
                     <a href="../../index.html#faleconosco">suporte</a>
                 </nav>
             </section>
-            
-            <div id="icons">
-                <img src="../../assets/login.png" alt="imagem de icon de conta" style="width: 60px; height: 60px;">
-                <img src="../../assets/seta.png" alt="seta" style="width: 40px; height: 40px;">
-            </div>
         </header>
 
         <main>
@@ -39,12 +33,12 @@
 
                 <div id="conteudos">
                     <nav>
-                        <a href="./exercicio3ano.html">Logarítmo</a>
-                        <a href="./exercicio3ano.html">Trigonometria</a>
-                        <a href="./exercicio3ano.html">Probabilidade</a>
-                        <a href="./exercicio3ano.html">Binômio de Newton</a>
-                        <a href="./exercicio3ano.html">Triângulo de Pascal</a>
-                        <a href="./exercicio3ano.html">Contagens</a>
+                        <a href="./exercicio3ano.html">Geometria analítica</a>
+                        <a href="./exercicio3ano.html">Análise combinatória</a>
+                        <a href="./exercicio3ano.html">Áreas de prismas</a>
+                        <a href="./exercicio3ano.html">Geometria espacial</a>
+                        <a href="./exercicio3ano.html">Equações algébricas</a>
+                        <a href="./exercicio3ano.html">Vetores <br>de R</a>
                     </nav>
                 </div>
         </main>
