js questões do terceiro ano completo

--- a/Site Mathtech/bc-exercicios/1 ano/exercicio1ano.html
+++ b/Site Mathtech/bc-exercicios/1 ano/exercicio1ano.html
@@ -55,8 +55,8 @@
         </div>
 
         <div id="botoes">
-            <a href="" id="botaoResolucao">
-                resolução
+            <a href="" id="botao">
+                enviar
             </a>
 
             <a href="../2 ano/log.html" id="botaoProximo">
