iniciacao do quiz

--- a/Site Mathtech/bc-exercicios/1 ano/exercicio1ano.html
+++ b/Site Mathtech/bc-exercicios/1 ano/exercicio1ano.html
@@ -45,7 +45,7 @@
                     <br>Qual é a vazão, em litro por hora, da bomba que foi ligada no início da segunda hora?
                 </p>
                 <div id="alternativas">
-                    <span>(A) 1000</span>
+                    <button>(A) 1000</button>
                     <span>(B) 1250</span>
                     <span>(C) 1500</span>
                     <span>(D) 2000</span>
@@ -55,7 +55,7 @@
         </div>
 
         <div id="botoes">
-            <a href="" id="botao">
+            <a href="" id="botaoEnviar">
                 enviar
             </a>
 
