--- a/Site Mathtech/material-de-apoio/mapas.html
+++ b/Site Mathtech/material-de-apoio/mapas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mathtech</title>
     <link rel="stylesheet" href="mapas.css">
+    <script src="../material-de-apoio/mapas.js" defer></script>
 </head>
 <body>
     <div id="containerGlobal">
@@ -29,26 +30,80 @@
             <h1>Mapas Mentais</h1>
 
             <section id="conteudos">
-
-                    <a href="#" class="primeiroAno"> Função <br>afim</a>
-                    <a href="#" class="primeiroAno"> Função <br>quadrática</a>
-                    <a href="#" class="primeiroAno"> Progressão <br>aritmética</a>
-                    <a href="#" class="primeiroAno"> Progressão <br>Geométrica</a>
-                    <a href="#" class="primeiroAno"> Matemática <br>Financeira</a>
-                    <a href="#" class="primeiroAno"> Função <br>Exponencial</a>
-                    <a href="#" class="segundoAno"> Trigonometria</a>
-                    <a href="#" class="segundoAno"> Logaritmo</a>
-                    <a href="#" class="segundoAno"> Probabilidade</a>
-                    <a href="#" class="segundoAno"> Binômio <br>de Newton</a>
-                    <a href="#" class="segundoAno"> Triângulo <br>de Pascal</a>
-                    <a href="#" class="segundoAno"> Contagens</a>
-                    <a href="#" class="terceiroAno"> Geometria <br>analítica</a>
-                    <a href="#" class="terceiroAno"> Análise <br>combinatória</a>
-                    <a href="#" class="terceiroAno"> Área <br>de prismas</a>
-                    <a href="#" class="terceiroAno"> Geometria <br>Espacial</a>
-                    <a href="#" class="terceiroAno"> Equações <br>algébricas</a>
-                    <a href="#" class="terceiroAno"> Vetores <br>de R</a>
+                <a href="#" class="primeiroAno"> Função <br>afim</a>
+                <a href="#" class="primeiroAno"> Função <br>quadrática</a>
+                <a href="#" class="primeiroAno"> Progressão <br>aritmética</a>
+                <a href="#" class="primeiroAno"> Progressão <br>Geométrica</a>
+                <a href="#" class="primeiroAno"> Matemática <br>Financeira</a>
+                <a href="#" class="primeiroAno"> Função <br>Exponencial</a>
+                <a href="#" class="segundoAno"> Trigonometria</a>
+                <a href="#" class="segundoAno"> Logaritmo</a>
+                <a href="#" class="segundoAno"> Probabilidade</a>
+                <a href="#" class="segundoAno"> Binômio <br>de Newton</a>
+                <a href="#" class="segundoAno"> Triângulo <br>de Pascal</a>
+                <a href="#" class="segundoAno"> Contagens</a>
+                <a href="#" class="terceiroAno"> Geometria <br>analítica</a>
+                <a href="#" class="terceiroAno"> Análise <br>combinatória</a>
+                <a href="#" class="terceiroAno"> Área <br>de prismas</a>
+                <a href="#" class="terceiroAno"> Geometria <br>Espacial</a>
+                <a href="#" class="terceiroAno"> Equações <br>algébricas</a>
+                <a href="#" class="terceiroAno"> Vetores <br>de R</a>
             </section>
+<!-- 
+            <dialog id="funcaoAfimMapa"open>
+                <button><img src="../../imagens mathtech/fechar-azul.png" alt=""></button>
+                <img src="../assets/mapas-mentais/funcao_afim.jpeg" alt="">
+            </dialog> -->
+<!-- 
+            <dialog id="funcaoQuadraticaMapa">
+                <img src="../assets/mapas-mentais/funcao_quadratica.jpeg" alt="">
+            </dialog>
+            <dialog id="pAritmeticaMapa">
+                <img src="../assets/mapas-mentais/progressao_aritmetica.jpeg" alt="">
+            </dialog>
+            <dialog id="pGeometricaMapa">
+                <img src="../assets/mapas-mentais/progressao_geometrica.jpeg" alt="">
+            </dialog>
+            <dialog id="matFinanceiraMapa">
+                <img src="../assets/mapas-mentais/matematica_financeira.jpeg" alt="">
+            </dialog>
+            <dialog id="funcaoExponencialMapa">
+                <img src="../assets/mapas-mentais/funcao_exponencial.jpeg" alt="">
+            </dialog>
+            <dialog id="trigonometriaMapa">
+                <img src="../assets/mapas-mentais/trigonometria.jpeg" alt="">
+            </dialog>
+            <dialog id="logaritmoMapa">
+                <img src="../assets/mapas-mentais/logaritmo.jpeg" alt="">
+            </dialog>
+            <dialog id="probabilidadeMapa">
+                <img src="../assets/mapas-mentais/probabilidade.jpeg" alt="">
+            </dialog>
+            <dialog id="binomioMapa">
+                <img src="../assets/mapas-mentais/" alt="">
+            </dialog>
+            <dialog id="contagensMapa">
+                <img src="../assets/mapas-mentais/contagem.jpeg" alt="">
+            </dialog>
+            <dialog id="trianguloMapa">
+                <img src="../assets/mapas-mentais/triangulo_pascal.jpeg" alt="">
+            </dialog>
+            <dialog id="geometriaAnaliticaMapa">
+                <img src="../assets/mapas-mentais/geo_analitica.jpeg" alt="">
+            </dialog>
+            <dialog id="analiseCombinatoriaMapa">
+                <img src="../assets/mapas-mentais/combinatoria.jpeg" alt="">
+            </dialog>
+            <dialog id="areaPrismasMapa">
+                <img src="../assets/mapas-mentais/prismas.jpeg" alt="">
+            </dialog>
+            <dialog id="geometriaEspacialMapa">
+                <img src="../assets/mapas-mentais/geo_espacial.jpeg" alt="">
+            </dialog>
+            <dialog id="equacoesAlgebricasMapa">
+                <img src="../assets/mapas-mentais/algebricas.jpeg" alt="">
+            </dialog>
+            <dialog id="vetoresMapa"></dialog> -->
         </main>
     </div>
 </body>
