--- a/Site Mathtech/material-de-apoio/resumos.html
+++ b/Site Mathtech/material-de-apoio/resumos.html
@@ -29,26 +29,25 @@
             </a>
             <h1>Resumos</h1>
 
-            <section id="conteudos">
-
-                    <a href="#" class="primeiroAno"> Função <br>afim</a>
-                    <a href="#" class="primeiroAno"> Função <br>quadrática</a>
-                    <a href="#" class="primeiroAno"> Progressão <br>aritmética</a>
-                    <a href="#" class="primeiroAno"> Progressão <br>Geométrica</a>
-                    <a href="#" class="primeiroAno"> Matemática <br>Financeira</a>
-                    <a href="#" class="primeiroAno"> Função <br>Exponencial</a>
-                    <a href="#" class="segundoAno"> Trigonometria</a>
-                    <a href="#" class="segundoAno"> Logaritmo</a>
-                    <a href="#" class="segundoAno"> Probabilidade</a>
-                    <a href="#" class="segundoAno"> Binômio <br>de Newton</a>
-                    <a href="#" class="segundoAno"> Triângulo <br>de Pascal</a>
-                    <a href="#" class="segundoAno"> Contagens</a>
-                    <a href="#" class="terceiroAno"> Geometria <br>analítica</a>
-                    <a href="#" class="terceiroAno"> Análise <br>combinatória</a>
-                    <a href="#" class="terceiroAno"> Área <br>de prismas</a>
-                    <a href="#" class="terceiroAno"> Geometria <br>Espacial</a>
-                    <a href="#" class="terceiroAno"> Equações <br>algébricas</a>
-                    <a href="#" class="terceiroAno"> Vetores <br>de R</a>
+            <section id="conteudos">   
+                <button class="primeiroAno" id="funcaoAfim"> Função <br>afim</button>
+                <button class="primeiroAno" id=""funcaoQuadratica> Função <br>quadrática</button>
+                <button class="primeiroAno" id="pAritmetica"> Progressão <br>aritmética</button>
+                <button class="primeiroAno" id="pGeometrica"> Progressão <br>Geométrica</button>
+                <button class="primeiroAno" id="matFinanceira"> Matemática <br>Financeira</button>
+                <button class="primeiroAno" id="funcaoExponencial"> Função <br>Exponencial</button>
+                <button class="segundoAno" id="trigonometria"> Trigonometria</button>
+                <button class="segundoAno" id="logaritmo"> Logaritmo</button>
+                <button class="segundoAno" id="probabilidade"> Probabilidade</button>
+                <button class="segundoAno" id="binomio"> Binômio <br>de Newton</button>
+                <button class="segundoAno" id="triangulo"> Triângulo <br>de Pascal</button>
+                <button class="segundoAno" id="contagens"> Contagens</button>
+                <button class="terceiroAno" id="geometriaAnalitica"> Geometria <br>analítica</button>
+                <button class="terceiroAno" id="analiseCombinatoria"> Análise <br>combinatória</button>
+                <button class="terceiroAno" id="areaPrismas"> Área <br>de prismas</button>
+                <button class="terceiroAno" id="geometriaEspacial"> Geometria <br>Espacial</button>
+                <button class="terceiroAno" id="equacoesAlgebricas"> Equações <br>algébricas</button>
+                <button class="terceiroAno" id="vetores"> Vetores <br>de R</button>
             </section>
         </main>
     </div>
