Páginas do banco de questões

--- a/site_mathtech/bc-exercicios/1 ano/menu-exercicios1.html
+++ b/site_mathtech/bc-exercicios/1 ano/menu-exercicios1.html
@@ -33,12 +33,12 @@
 
             <div id="conteudos">
                 <nav>
-                    <a href="./exercicio1ano.html">Função Afim</a>
-                    <a href="./exercicio1ano.html">Função <br> Quadrática</a>
-                    <a href="./exercicio1ano.html">Progressão <br>aritmética</a>
-                    <a href="./exercicio1ano.html">Progressão <br>geométrica</a>
-                    <a href="./exercicio1ano.html">Matemática <br> financeira</a>
-                    <a href="./exercicio1ano.html">Função <br>exponencial</a>
+                    <a href="./pag-funcaoAfim.html">Função Afim</a>
+                    <a href="./pag-funcao-quadratica.html">Função <br> Quadrática</a>
+                    <a href="./pag-pa.html">Progressão <br>aritmética</a>
+                    <a href="./pag-pg.html">Progressão <br>geométrica</a>
+                    <a href="./pag-mat-financeira.html">Matemática <br> financeira</a>
+                    <a href="./pag-funcao-exponencial.html">Função <br>exponencial</a>
                 </nav>
             </div>
         </main>
