--- a/site_mathtech/bc-exercicios/2 ano/menu-exercicios2.html
+++ b/site_mathtech/bc-exercicios/2 ano/menu-exercicios2.html
@@ -33,12 +33,12 @@
 
                 <div id="conteudos">
                     <nav>
-                        <a href="./exercicio2ano.html">Logarítmo</a>
-                        <a href="./exercicio2ano.html">Trigonometria</a>
-                        <a href="./exercicio2ano.html">Probabilidade</a>
-                        <a href="./exercicio2ano.html">Binômio de Newton</a>
-                        <a href="./exercicio2ano.html">Triângulo de Pascal</a>
-                        <a href="./exercicio2ano.html">Contagens</a>
+                        <a href="./pag-log.html">Logarítmo</a>
+                        <a href="./pag-trigonometria.html">Trigonometria</a>
+                        <a href="./pag-probabilidade.html">Probabilidade</a>
+                        <a href="./pag-binomio.html">Binômio de Newton</a>
+                        <a href="./pag-triangulo-pascal.html">Triângulo de Pascal</a>
+                        <a href="./pag-contagens.html">Contagens</a>
                     </nav>
                 </div>
         </main>
