--- a/site_mathtech/bc-exercicios/3 ano/menu-exercicios3.html
+++ b/site_mathtech/bc-exercicios/3 ano/menu-exercicios3.html
@@ -33,12 +33,12 @@
 
                 <div id="conteudos">
                     <nav>
-                        <a href="./exercicio3ano.html">Geometria analítica</a>
-                        <a href="./exercicio3ano.html">Análise combinatória</a>
-                        <a href="./exercicio3ano.html">Áreas de prismas</a>
-                        <a href="./exercicio3ano.html">Geometria espacial</a>
-                        <a href="./exercicio3ano.html">Equações algébricas</a>
-                        <a href="./exercicio3ano.html">Vetores <br>de R</a>
+                        <a href="./pag-geo-analitica.html">Geometria analítica</a>
+                        <a href="./pag-analise-combinatoria.html">Análise combinatória</a>
+                        <a href="./pag-prismas.html">Áreas de prismas</a>
+                        <a href="./pag-geo-espacial.html">Geometria espacial</a>
+                        <a href="./pag-equacoes.html">Equações algébricas</a>
+                        <a href="./pag-vetores.html">Vetores <br>de R</a>
                     </nav>
                 </div>
         </main>
