Inserção dos menus do banco de questões (dnv)

--- a/Site Mathtech/bc-exercicios/3 ano/menu-exercicios3.html
+++ b/Site Mathtech/bc-exercicios/3 ano/menu-exercicios3.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="menu-exercicios3.css">
     <title>Mathtech/conteúdos</title>
 </head>
+
 <body>
     <div id="containerGlobal">
         <header>
             <a href="../../index.html">
-                <img src="../../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;" id="logo">
+                <img src="../../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;"
+                    id="logo">
             </a>
             <section id="navegacao">
                 <nav>
@@ -31,7 +34,7 @@
             <h1>Banco de Exercícios - 3º Ano</h1>
             <p>Escolha o assunto:</p>
 
-                
+
             <div id="conteudos">
                 <nav>
                     <a href="./pag-geo-analitica.html">Geometria analítica</a>
@@ -45,4 +48,5 @@
         </main>
     </div>
 </body>
+
 </html>
