ajuste das alternativas do banco de questões e linkagem dos exercicios nos conteúdos

--- a/Site Mathtech/bc-exercicios/1 ano/exercicio1ano.html
+++ b/Site Mathtech/bc-exercicios/1 ano/exercicio1ano.html
@@ -11,7 +11,9 @@
 
 <body>
     <header>
-        <img src="../../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;" id="logo">
+        <a href="../../index.html">
+            <img src="../../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;" id="logo">
+        </a>
         <section id="navegacao">
             <nav>
                 <a href="../../index.html#sobreConteudo">conteúdo</a>
@@ -30,10 +32,10 @@
         <h1>Exercício 1- Função afim</h1>
 
             <button id="seta-direita">
-                <img src="../../assets/28.png" alt="">
+                <img src="../../assets/seta laranja 1.png" alt="">
             </button>
             <button id="seta-esquerda">
-                <img src="../../assets/28.png" alt="">
+                <img src="../../assets/seta laranja 1.png" alt="">
             </button>
 
         <div id="questao">
@@ -44,24 +46,24 @@
                     volume de água presente na cisterna, em função <br> do tempo.
                     <br>Qual é a vazão, em litro por hora, da bomba que foi ligada no início da segunda hora?
                 </p>
-                <div id="alternativas">
-                    <span>(A) 1000</span>
-                    <span>(B) 1250</span>
-                    <span>(C) 1500</span>
-                    <span>(D) 2000</span>
-                    <span>(E) 2500</span>
-                </div>
+            </div>
+            <div id="alternativas">
+                <button>(A) 1000</button>
+                <button>(B) 1250</button>
+                <button>(C) 1500</button>
+                <button>(D) 2000</button>
+                <button>(E) 2500</button>
             </div>
         </div>
 
         <div id="botoes">
-            <a href="" id="botao">
+            <button id="botaoResolucao">
                 enviar
-            </a>
+            </button>
 
-            <a href="../2 ano/log.html" id="botaoProximo">
+            <button id="botaoProximo">
                 próxima
-            </a>
+            </button>
         </div>
     </main>
 </body>
