--- a/Site Mathtech/bc-exercicios/1 ano/pag-mat-financeira.html
+++ b/Site Mathtech/bc-exercicios/1 ano/pag-mat-financeira.html
@@ -31,7 +31,7 @@
             <a href="../1 ano/menu-exercicios1.html">
                 <img src="../../assets/sair seta.png" alt="">
             </a>
-            <h1>Exercícios -  Matemática FInanceira</h1>
+            <h1>Exercícios -  Matemática Financeira</h1>
         </div>
 
         <div class="" id="conteudo">
