--- a/Site Mathtech/bc-exercicios/2 ano/exercicio2ano.html
+++ b/Site Mathtech/bc-exercicios/2 ano/exercicio2ano.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="exercicio2ano.css">
     <title>Document</title>
+    <script src="scriptEx2.js" defer type="module"></script>
 </head>
 
 <body>
     <header>
-        <img src="../../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;" id="logo">
+        <a href="../../index.html">
+            <img src="../../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;" id="logo">
+        </a>
         <section id="navegacao">
             <nav>
                 <a href="../../index.html#sobreConteudo">conteúdo</a>
@@ -26,48 +29,41 @@
         <a href="./menu-exercicios2.html">
             <img src="../../assets/sair seta.png" alt="sair seta azul escuro">
         </a>
-        <h1>Exercício 3 - Probabilidade</h1>
+        <h1>Exercício 1- Logarítmo</h1>
 
             <button id="seta-direita">
-                <img src="../../assets/28.png" alt="">
+                <img src="../../assets/seta laranja 1.png" alt="">
             </button>
             <button id="seta-esquerda">
-                <img src="../../assets/28.png" alt="">
+                <img src="../../assets/seta laranja 1.png" alt="">
             </button>
 
         <div id="questao">
             <div id="pergunta">
-                <p>(Enem/2012) O diretor de uma escola convidou os 280 alunos de terceiro ano a participarem de uma brincadeira. <br> 
-                    Suponha que existem 5 objetos e 6 personagens numa casa de 9 cômodos; um dos <br>
-                    personagens esconde um dos objetos em um dos cômodos da casa.
-                    O objetivo da brincadeira é adivinhar qual objeto <br>
-                    foi escondido por qual personagem e em qual cômodo da casa o
-                    objeto foi escondido. Todos os alunos decidiram <br>
-                    participar. A cada vez um aluno é sorteado e dá a sua resposta. <br>
-                    As respostas devem ser sempre distintas das anteriores, e um mesmo aluno não pode ser sorteado mais de uma vez. <br>
-                    Se a resposta do aluno estiver correta, ele é declarado vencedor e a brincadeira é encerrada. <br>
-                    O diretor sabe que algum aluno acertará a resposta porque há:
+                <p>(Enem 2016) Uma cisterna de 6 000 L foi esvaziada em um período de 3 h. Na primeira hora foi
+                    utilizada apenas <br> uma bomba, mas nas duas horas seguintes, a fim de reduzir o tempo de esvaziamento,
+                    outra bomba foi ligada com a <br> primeira. O gráfico, formado por dois segmentos de reta, mostra o
+                    volume de água presente na cisterna, em função <br> do tempo.
+                    <br>Qual é a vazão, em litro por hora, da bomba que foi ligada no início da segunda hora?
                 </p>
-                <div id="alternativas">
-                    <span>(A) 10 alunos a mais do que possíveis respostas distintas</span>
-                    <span>(B) 20 alunos a mais do que possíveis respostas distintas</span>
-                    <span>(C) 119 alunos a mais do que possíveis respostas distintas</span>
-                    <span>(D) 260 alunos a mais do que possíveis respostas distintas</span>
-                    <span>(E) 270 alunos a mais do que possíveis respostas distintas</span>
-
-
-                </div>
+            </div>
+            <div id="alternativas">
+                <button>(A) 1000</button>
+                <button>(B) 1250</button>
+                <button>(C) 1500</button>
+                <button>(D) 2000</button>
+                <button>(E) 2500</button>
             </div>
         </div>
 
         <div id="botoes">
-            <a href="" id="botaoResolucao">
-                resolução
-            </a>
+            <button id="botaoResolucao">
+                enviar
+            </button>
 
-            <a href="../2 ano/log.html" id="botaoProximo">
+            <button id="botaoProximo">
                 próxima
-            </a>
+            </button>
         </div>
     </main>
 </body>
