--- a/Site Mathtech/conteudos/1 ano/funcaoquadratica.html
+++ b/Site Mathtech/conteudos/1 ano/funcaoquadratica.html
@@ -172,7 +172,7 @@
     </div>
 
     <div id="botoes">
-        <a href="" id="botaoExercicios">
+        <a href="../../bc-exercicios/1 ano/exercicio1ano.html" id="botaoExercicios">
             exercícios
         </a>
 
