--- a/Site Mathtech/conteudos/3 ano/expressoesalgebricas.html
+++ b/Site Mathtech/conteudos/3 ano/expressoesalgebricas.html
@@ -236,7 +236,7 @@
     </div>
 
     <div id="botoes">
-        <a href="" id="botaoExercicios">
+        <a href="../../bc-exercicios/3 ano/exercicio3ano.html" id="botaoExercicios">
             exercícios
         </a>
 
