--- a/Site Mathtech/bc-exercicios/3 ano/exercicio3ano.html
+++ b/Site Mathtech/bc-exercicios/3 ano/exercicio3ano.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="exercicio3ano.css">
     <title>Document</title>
+    <script src="scriptEx3.js" defer type="module"></script>
 </head>
 
 <body>
     <header>
-        <img src="../../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;" id="logo">
+        <a href="../../index.html">
+            <img src="../../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;" id="logo">
+        </a>
         <section id="navegacao">
             <nav>
                 <a href="../../index.html#sobreConteudo">conteúdo</a>
@@ -24,44 +27,43 @@
 
     <main>
         <a href="./menu-exercicios3.html">
-            <img src="../../assets/sair seta (2).png" alt="sair seta azul escuro">
+            <img src="../../assets/sair seta.png" alt="sair seta azul escuro">
         </a>
-        <h1>Exercício 1- Geometria analítica</h1>
+        <h1>Exercício 1- Geometria Analítica</h1>
 
             <button id="seta-direita">
-                <img src="../../assets/28.png" alt="">
+                <img src="../../assets/seta laranja 1.png" alt="">
             </button>
             <button id="seta-esquerda">
-                <img src="../../assets/28.png" alt="">
+                <img src="../../assets/seta laranja 1.png" alt="">
             </button>
 
         <div id="questao">
             <div id="pergunta">
-                <p>(ENEM 2018)Para apagar os focos A e B de um incêndio, que estavam a uma distância de 30 m um do outro, <br>
-                    os bombeiros de um quartel decidiram se posicionar de modo que a distância de um bombeiro ao foco A,
-                    de temperatura mais elevada, <br> fosse sempre o dobro da distância desse bombeiro ao foco B, de temperatura
-                    menos elevada.
-                    Nestas condições, <br> a maior distância, em metro,
-                    que dois bombeiros poderiam ter entre eles é:
+                <p>(Enem 2016) Uma cisterna de 6 000 L foi esvaziada em um período de 3 h. Na primeira hora foi
+                    utilizada apenas <br> uma bomba, mas nas duas horas seguintes, a fim de reduzir o tempo de esvaziamento,
+                    outra bomba foi ligada com a <br> primeira. O gráfico, formado por dois segmentos de reta, mostra o
+                    volume de água presente na cisterna, em função <br> do tempo.
+                    <br>Qual é a vazão, em litro por hora, da bomba que foi ligada no início da segunda hora?
                 </p>
-                <div id="alternativas">
-                    <span>(A) 30</span>
-                    <span>(B) 40</span>
-                    <span>(C) 45</span>
-                    <span>(D) 60</span>
-                    <span>(E) 68</span>
-                </div>
+            </div>
+            <div id="alternativas">
+                <button>(A) 1000</button>
+                <button>(B) 1250</button>
+                <button>(C) 1500</button>
+                <button>(D) 2000</button>
+                <button>(E) 2500</button>
             </div>
         </div>
 
         <div id="botoes">
-            <a href="" id="botaoResolucao">
-                resolução
-            </a>
+            <button id="botaoResolucao">
+                enviar
+            </button>
 
-            <a href="../2 ano/log.html" id="botaoProximo">
+            <button id="botaoProximo">
                 próxima
-            </a>
+            </button>
         </div>
     </main>
 </body>
