--- a/Site Mathtech/conteudos/2 ano/log.html
+++ b/Site Mathtech/conteudos/2 ano/log.html
@@ -144,7 +144,7 @@
     </div>
 
     <div id="botoes">
-        <a href="" id="botaoExercicios">
+        <a href="../../bc-exercicios/2 ano/exercicio2ano.html" id="botaoExercicios">
             exercícios
         </a>
 
