--- a/Site Mathtech/conteudos/2 ano/trigonometria.html
+++ b/Site Mathtech/conteudos/2 ano/trigonometria.html
@@ -172,7 +172,7 @@
     </div>
 
     <div id="botoes">
-        <a href="" id="botaoExercicios">
+        <a href="../../bc-exercicios/2 ano/exercicio2ano.html" id="botaoExercicios">
             exercícios
         </a>
 
