--- a/Site Mathtech/conteudos/3 ano/geometriaanalitica.html
+++ b/Site Mathtech/conteudos/3 ano/geometriaanalitica.html
@@ -215,7 +215,7 @@
     </div>
 
     <div id="botoes">
-        <a href="" id="botaoExercicios">
+        <a href="../../bc-exercicios/3 ano/exercicio3ano.html" id="botaoExercicios">
             exercícios
         </a>
 
