home linkada no banco de dados

--- a/Site Mathtech/material-de-apoio/videos.html
+++ b/Site Mathtech/material-de-apoio/videos.html
@@ -9,7 +9,7 @@
 <body>
     <div id="containerGlobal">
         <header>
-            <a href="./index.html">
+            <a href="../index.html">
                 <img src="../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;" id="logo">
             </a>
             <section id="navegacao">
@@ -31,24 +31,24 @@
 
             <section id="conteudos">
 
-                    <a href="#" class="primeiroAno"> Função <br>afim</a>
-                    <a href="#" class="primeiroAno"> Função <br>quadrática</a>
-                    <a href="#" class="primeiroAno"> Progressão <br>aritmética</a>
-                    <a href="#" class="primeiroAno"> Progressão <br>Geométrica</a>
-                    <a href="#" class="primeiroAno"> Matemática <br>Financeira</a>
-                    <a href="#" class="primeiroAno"> Função <br>Exponencial</a>
-                    <a href="#" class="segundoAno"> Trigonometria</a>
-                    <a href="#" class="segundoAno"> Logaritmo</a>
-                    <a href="#" class="segundoAno"> Probabilidade</a>
-                    <a href="#" class="segundoAno"> Binômio <br>de Newton</a>
-                    <a href="#" class="segundoAno"> Triângulo <br>de Pascal</a>
-                    <a href="#" class="segundoAno"> Contagens</a>
-                    <a href="#" class="terceiroAno"> Geometria <br>analítica</a>
-                    <a href="#" class="terceiroAno"> Análise <br>combinatória</a>
-                    <a href="#" class="terceiroAno"> Área <br>de prismas</a>
-                    <a href="#" class="terceiroAno"> Geometria <br>Espacial</a>
-                    <a href="#" class="terceiroAno"> Equações <br>algébricas</a>
-                    <a href="#" class="terceiroAno"> Vetores <br>de R</a>
+                    <a href="https://youtu.be/qbafCJrDCDw?feature=shared" class="primeiroAno"> Função <br>afim</a>
+                    <a href="https://www.youtube.com/watch?v=mzEGFoEenh8&list=PL-LPJn0YTIEHqEXsUZM7-3V8iJMdoTzla" class="primeiroAno"> Função <br>quadrática</a>
+                    <a href="https://www.youtube.com/watch?v=TC2HcZV3mGo&list=PLTPg64KdGgYgS8sru4K9F2t2wpLuAR-Me" class="primeiroAno"> Progressão <br>aritmética</a>
+                    <a href="https://www.youtube.com/watch?v=Jad_XG9bDCE&list=PLTPg64KdGgYht7VXcqA5VWLCgeOAJjCqj" class="primeiroAno"> Progressão <br>Geométrica</a>
+                    <a href="https://www.youtube.com/watch?v=J3lwBTutjaw&list=PLBmOl2XZzISJNSbcvCyX4vd1u5rt2Fj-h" class="primeiroAno"> Matemática <br>Financeira</a>
+                    <a href="https://www.youtube.com/watch?v=n5NRv2cWQIg&list=PLTPg64KdGgYhllRJbaGMQGRa-3-3RNGzb" class="primeiroAno"> Função <br>Exponencial</a>
+                    <a href="https://www.youtube.com/watch?v=RxfPjqXx-g0&list=PLGyv8aUrOlzCokxNFQCn2sPQf2xZNjBLg" class="segundoAno"> Trigonometria</a>
+                    <a href="https://www.youtube.com/watch?v=esdFuyG7zGs&list=PLTPg64KdGgYiyW4u-g8y-dSkT1iz2cUKA" class="segundoAno"> Logaritmo</a>
+                    <a href="https://www.youtube.com/watch?v=esdFuyG7zGs&list=PLTPg64KdGgYiyW4u-g8y-dSkT1iz2cUKA" class="segundoAno"> Probabilidade</a>
+                    <a href="https://www.youtube.com/watch?v=aQUt51F2iDk&list=PLNJN8eyDzxuOnVmcs4Z8e5qvsurKa8Pnu" class="segundoAno"> Binômio <br>de Newton</a>
+                    <a href="https://www.youtube.com/watch?v=p2261_Pajf4&list=PL4oYsiPMDSBgJDh2PCdXaBYnRw0lqAdo1" class="segundoAno"> Triângulo <br>de Pascal</a>
+                    <a href="https://www.youtube.com/watch?v=6vDcJoLj9hg&list=PLrVGp617x0hC6oZt1-XeqRNT91bEYXDyb" class="segundoAno"> Contagens</a>
+                    <a href="https://www.youtube.com/watch?v=ZJ5Aqwcx9f4&list=PLEfwqyY2ox858XssXB_f-Jx42fgTb0Vsn" class="terceiroAno"> Geometria <br>analítica</a>
+                    <a href="https://www.youtube.com/watch?v=rSgs9YD9ns0&list=PLaKmzX_hXWkIW5WUcy15P3NU78v7DXbZk" class="terceiroAno"> Análise <br>combinatória</a>
+                    <a href="https://www.youtube.com/watch?v=Bz1lw74k4XI&pp=ygUQw6FyZWEgZGUgcHJpc21hcw%3D%3D" class="terceiroAno"> Área <br>de prismas</a>
+                    <a href="https://www.youtube.com/watch?v=v_PQnBk-8Mc&list=PLEfwqyY2ox87GYPpLcP1kv2Nt9xu0oBTy" class="terceiroAno"> Geometria <br>Espacial</a>
+                    <a href="https://www.youtube.com/watch?v=i7MZpiRht2E&list=PLGyv8aUrOlzBA8XSO37bUIBCwfqG5Ld0d" class="terceiroAno"> Equações <br>algébricas</a>
+                    <a href="https://www.youtube.com/watch?v=J8PZvr_y02k&list=PL53AF5032B8C16697" class="terceiroAno"> Vetores <br>de R</a>
             </section>
         </main>
     </div>
