--- a/Site Mathtech/bc-exercicios/2 ano/pag-trigonometria.html
+++ b/Site Mathtech/bc-exercicios/2 ano/pag-trigonometria.html
@@ -10,7 +10,7 @@
 <body>
     <div id="containerGlobal">
         <header>
-            <a href="./index.html">
+            <a href="../../index.html">
                 <img src="../../assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;"
                     id="logo">
             </a>
