--- a/Site Mathtech/material-de-apoio/mapas.html
+++ b/Site Mathtech/material-de-apoio/mapas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mathtech</title>
-    <link rel="stylesheet" href="mapas.css">
+    <link rel="stylesheet" href="./mapas.css">
 </head>
 <body>
     <div id="containerGlobal">
@@ -30,8 +30,8 @@
 
             <section id="conteudos">
 
-                    <a href="#" class="primeiroAno"> Função <br>afim</a>
-                    <a href="#" class="primeiroAno"> Função <br>quadrática</a>
+                    <a href="../mapas_mentais/funcaoafim.html" class="primeiroAno"> Função <br>afim</a>
+                    <a href="../mapas_mentais/funcao-quadratica.html" class="primeiroAno"> Função <br>quadrática</a>
                     <a href="#" class="primeiroAno"> Progressão <br>aritmética</a>
                     <a href="#" class="primeiroAno"> Progressão <br>Geométrica</a>
                     <a href="#" class="primeiroAno"> Matemática <br>Financeira</a>
