--- a/Site Mathtech/mapas_mentais/funcao-exponencial.html
+++ b/Site Mathtech/mapas_mentais/funcao-exponencial.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="containerGlobal">
-        <a href="">
+        <a href="../material-de-apoio/mapas.html">
             <img src="../assets/sair seta.png" alt="">
         </a>
-    <img src="../assets/img-mapas-mentais/funcao-afim-mapa.jpg" alt="">     
+    <img src="../assets/img-mapas-mentais/funcao-exponencial-mapa.jpg" alt="">     
     </div>
 </body>
 </html>
