--- a/Site Mathtech/mapas_mentais/funcaoafim.html
+++ b/Site Mathtech/mapas_mentais/funcaoafim.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="containerGlobal">
-        <a href="">
+        <a href="../material-de-apoio/mapas.html">
             <img src="../assets/sair seta.png" alt="">
         </a>
     <img src="../assets/img-mapas-mentais/funcao-afim-mapa.jpg" alt="">     
