--- a/Site Mathtech/material-de-apoio/mapas.html
+++ b/Site Mathtech/material-de-apoio/mapas.html
@@ -32,21 +32,21 @@
 
                     <a href="../mapas_mentais/funcaoafim.html" class="primeiroAno"> Função <br>afim</a>
                     <a href="../mapas_mentais/funcao-quadratica.html" class="primeiroAno"> Função <br>quadrática</a>
-                    <a href="#" class="primeiroAno"> Progressão <br>aritmética</a>
-                    <a href="#" class="primeiroAno"> Progressão <br>Geométrica</a>
-                    <a href="#" class="primeiroAno"> Matemática <br>Financeira</a>
-                    <a href="#" class="primeiroAno"> Função <br>Exponencial</a>
-                    <a href="#" class="segundoAno"> Trigonometria</a>
-                    <a href="#" class="segundoAno"> Logaritmo</a>
-                    <a href="#" class="segundoAno"> Probabilidade</a>
-                    <a href="#" class="segundoAno"> Binômio <br>de Newton</a>
-                    <a href="#" class="segundoAno"> Triângulo <br>de Pascal</a>
-                    <a href="#" class="segundoAno"> Contagens</a>
-                    <a href="#" class="terceiroAno"> Geometria <br>analítica</a>
-                    <a href="#" class="terceiroAno"> Análise <br>combinatória</a>
-                    <a href="#" class="terceiroAno"> Área <br>de prismas</a>
-                    <a href="#" class="terceiroAno"> Geometria <br>Espacial</a>
-                    <a href="#" class="terceiroAno"> Equações <br>algébricas</a>
+                    <a href="../mapas_mentais/pa.html" class="primeiroAno"> Progressão <br>aritmética</a>
+                    <a href="../mapas_mentais/pg.html" class="primeiroAno"> Progressão <br>Geométrica</a>
+                    <a href="../mapas_mentais/matematica-financeira.html" class="primeiroAno"> Matemática <br>Financeira</a>
+                    <a href="../mapas_mentais/funcao-exponencial.html" class="primeiroAno"> Função <br>Exponencial</a>
+                    <a href="../mapas_mentais/trigonometria.html" class="segundoAno"> Trigonometria</a>
+                    <a href="../mapas_mentais/log.html" class="segundoAno"> Logaritmo</a>
+                    <a href="../mapas_mentais/probaibilidade.html" class="segundoAno"> Probabilidade</a>
+                    <a href="../mapas_mentais/binomio.html" class="segundoAno"> Binômio <br>de Newton</a>
+                    <a href="../mapas_mentais/triangulopascal.html" class="segundoAno"> Triângulo <br>de Pascal</a>
+                    <a href="../mapas_mentais/contagens.html" class="segundoAno"> Contagens</a>
+                    <a href="../mapas_mentais/geometria-analitica.html" class="terceiroAno"> Geometria <br>analítica</a>
+                    <a href="../mapas_mentais/analise-combinatoria.html" class="terceiroAno"> Análise <br>combinatória</a>
+                    <a href="../mapas_mentais/area-de-prismas.html" class="terceiroAno"> Área <br>de prismas</a>
+                    <a href="../mapas_mentais/geometria-espacial.html" class="terceiroAno"> Geometria <br>Espacial</a>
+                    <a href="../mapas_mentais/expressoes-algebricas.html" class="terceiroAno"> Equações <br>algébricas</a>
                     <a href="#" class="terceiroAno"> Vetores <br>de R</a>
             </section>
         </main>
