--- a/Site Mathtech/pagConta.html
+++ b/Site Mathtech/pagConta.html
@@ -38,58 +38,60 @@
 
                 <section id="dadosUsuario">
                     <div id="inputs">
-                        <input type="text" placeholder="Nome Sobrenome">
-                        <input type="text" placeholder="nomesobrenome@email.com">
-                        <input type="text" placeholder="senha123">
-                        <input type="text" placeholder="(00)00000-0000">
+                        <input type="text" placeholder="    Nome Sobrenome">
+                        <input type="text" placeholder="    nomesobrenome@email.com">
+                        <input type="text" placeholder="    senha123">
+                        <input type="text" placeholder="    (00) 00000-0000">
                     </div>
-                    <button>REDEFIINIR</button>
+                    <button>redefinir</button>
                 </section>
             </div>
 
-            <div id="progresso">
-                <h2>1º ano</h2>
-                <div id="barrasUm">
-                    <p>4 de 6 conteúdos lidos</p>
-                    <div class="progressoContUm">
-                        <div class="progressoCont-barUm"></div>
+            <div id="progressoGeral">
+                <div id="progresso">
+                    <h2>1º ano</h2>
+                    <div id="barrasUm">
+                        <p>4 de 6 conteúdos lidos</p>
+                        <div class="progressoContUm">
+                            <div class="progressoCont-barUm"></div>
+                        </div>
+                        <p>30 de 90 questões concluídas</p>
+                        <div class="progressoQuestUm">
+                            <div class="progressoQuest-barUm"></div>
+                        </div>
                     </div>
-                    <p>30 de 90 questões concluídas</p>
-                    <div class="progressoQuestUm">
-                        <div class="progressoQuest-barUm"></div>
-                    </div>
-                </div>
 
-                <h2>2º ano</h2>
-                <div id="barrasDois">
-                    <p>4 de 6 conteúdos lidos</p>
-                    <div class="progressoContDois">
-                        <div class="progressoCont-barDois"></div>
+                    <h2>2º ano</h2>
+                    <div id="barrasDois">
+                        <p>4 de 6 conteúdos lidos</p>
+                        <div class="progressoContDois">
+                            <div class="progressoCont-barDois"></div>
+                        </div>
+                        <p>30 de 90 questões concluídas</p>
+                        <div class="progressoQuestDois">
+                            <div class="progressoQuest-barDois"></div>
+                        </div>
                     </div>
-                    <p>30 de 90 questões concluídas</p>
-                    <div class="progressoQuestDois">
-                        <div class="progressoQuest-barDois"></div>
-                    </div>
-                </div>
 
-                <h2>3º ano</h2>
-                <div id="barrasTres">
-                    <p>4 de 6 conteúdos lidos</p>
-                    <div class="progressoContTres">
-                        <div class="progressoCont-barTres"></div>
-                    </div>
-                    <p>30 de 90 questões concluídas</p>
-                    <div class="progressoQuestTres">
-                        <div class="progressoQuest-barTres"></div>
+                    <h2>3º ano</h2>
+                    <div id="barrasTres">
+                        <p>4 de 6 conteúdos lidos</p>
+                        <div class="progressoContTres">
+                            <div class="progressoCont-barTres"></div>
+                        </div>
+                        <p>30 de 90 questões concluídas</p>
+                        <div class="progressoQuestTres">
+                            <div class="progressoQuest-barTres"></div>
+                        </div>
                     </div>
                 </div>
                 <h1>Seu <br> progresso</h1>
-                <div id="maiorPontuacao">
-                    <h2>Maior pontuação</h2>
-                    <strong>10</strong>
-                    <span>de 10</span>
-                    <p>no quiz <strong>2 ano- Médio</strong></p>
-                </div>
+                    <div id="maiorPontuacao">
+                        <h2>Maior pontuação</h2>
+                        <strong>10</strong>
+                        <span>de 10</span>
+                        <p>no quiz <strong>2 ano- Médio</strong></p>
+                    </div>
             </div>
         </main>
     </div>
