--- a/Site Mathtech/cadastro.html
+++ b/Site Mathtech/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="cadastro.css">
 </head>
 <body>
     <div id="ContainerGlobal">
@@ -12,29 +12,34 @@
             <a href="./index.html">
                 <img src="./assets/mathtech.png" alt="imagem da logo" style="width: 180px; height: 170px;" id="logo">
             </a>
-            <img src="./assets/41.png" alt="icone de fechar nas cores bege e azul claro">
+            <img src="./assets/41.png" alt="icone de fechar nas cores bege e azul claro" id="sair">
         </header>
 
-        <img src="./assets/login- formas.png" alt="formas">
-        <div id="acessarConta">
-            <h1>Acesse sua conta:</h1>
-            <div id="criarConta">
-            <a href="#"> <h2>Já tenho uma conta</h2></a>
-            <h2>Criar uma conta</h2>
-            <hr>    
+        <main>
+            <img src="./assets/login- formas.png" alt="formas">
+            <div id="acessarConta">
+                <h1>Acesse sua conta:</h1>
+                <div id="criarConta">
+                    <a href="#"> <h2>Já tenho uma conta</h2></a>
+                    <h2>Criar uma conta</h2>   
+                </div>
+                <hr>
+                <div>
+                    <img src="./assets/google.png" alt="google">
+                    <p>Cadastrar com email</p> 
+                    <div id="hr2">
+                        <hr>
+                    </div>
+                </div>
+                <div id="inputs">
+                    <input type="text" placeholder="      Insira seu nome">
+                    <input type="text" placeholder="      Insira sua email">
+                    <input type="text" placeholder="      (00)00000-0000">
+                    <input type="text" placeholder="      Crie sua senha">
+                    <button>cadastrar</button>
+                </div>
             </div>
-            <div>
-                <img src="./assets/google.png" alt="google">
-                <hr>Cadastrar com email <hr>
-            </div>
-            <div id="inputs">
-                <input type="text" placeholder="Insira seu nome">
-                <input type="text" placeholder="Insira sua email">
-                <input type="text" (00-00000-0000)>
-                <input type="text" placeholder="Crie sua senha">
-                <button>CADASTRAR</button>
-            </div>
-        </div>
+        </main>
     </div>
 </body>
 </html>
