--- a/Site Mathtech/login.html
+++ b/Site Mathtech/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="login.css">
+    <script src="./login.js" defer></script>
 </head>
 <body>
     <div id="ContainerGlobal">
@@ -30,10 +31,10 @@
                     <hr>
                 </div>
                 <div id="inputs">
-                    <input type="text" placeholder="      Insira seu email">
-                    <input type="text" placeholder="      Insira sua senha">
+                    <input type="text" placeholder="Insira seu email" id="email">
+                    <input type="text" placeholder="Insira sua senha" id="senha">
                     <p>Esqueceu sua senha? <a href="#"> Redefinir</a></p> 
-                    <button>CADASTRAR</button>
+                    <button id="botao">CADASTRAR</button>
                 </div>
             </div>
         </main>
