--- a/Site Mathtech/cadastro.html
+++ b/Site Mathtech/cadastro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="cadastro.css">
+    <script src="./cadastro.js" defer></script>
 </head>
 <body>
     <div id="ContainerGlobal">
@@ -20,7 +21,7 @@
             <div id="acessarConta">
                 <h1>Acesse sua conta:</h1>
                 <div id="criarConta">
-                    <a href="#"> <h2>Já tenho uma conta</h2></a>
+                    <a href="./login.html"> <h2>Já tenho uma conta</h2></a>
                     <h2>Criar uma conta</h2>   
                 </div>
                 <hr>
@@ -32,10 +33,10 @@
                     </div>
                 </div>
                 <div id="inputs">
-                    <input type="text" placeholder="      Insira seu nome">
-                    <input type="text" placeholder="      Insira sua email">
-                    <input type="text" placeholder="      (00)00000-0000">
-                    <input type="text" placeholder="      Crie sua senha">
+                    <input type="text" placeholder="Insira seu nome" id="nome">
+                    <input type="text" placeholder="Insira sua email" id="email">
+                    <input type="text" placeholder="(00)00000-0000" id="telefone">
+                    <input type="text" placeholder="Crie sua senha" id="senha">
                     <button>cadastrar</button>
                 </div>
             </div>
